<resources>
    <string name="app_name">MobileProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">전체 보기</string>
    <string name="menu_gallery">즐겨찾는 단어</string>
    <string name="menu_slideshow">외우기 어려운 단어</string>
    <string name="menu_tools">초급 단어</string>
    <string name="menu_share">중급 단어</string>
    <string name="menu_send">고급 단어</string>
</resources>
