<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/list_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/favorite_foreground"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/hard_foreground"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/diff1_foreground"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/diff2_foreground"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@mipmap/diff3_foreground"
            android:title="@string/menu_send" />
    </group>

</menu>
